Bug 299008 set mOSHE at the right time, and don't clear mLSHE when loading the error page r=jst sr=bz a=bsmedberg